--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=ToDoListDB
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=ToDoListDB;encrypt=true;trustServerCertificate=true
 spring.datasource.username=TestUser
 spring.datasource.password=TestUser123!
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
